--- a/Ausarbeitung/literatur.bib
+++ b/Ausarbeitung/literatur.bib
@@ -6,3 +6,29 @@
 	year      = {2010},
 	url       = {http://arxiv.org/abs/1012.1850}
 }
+
+@book{bMatching,
+	title={Combinatorial Optimization},
+	author={Cook, W.J. and Cunningham, W.H. and Pulleyblank, W.R. and Schrijver, A.},
+	isbn={9781118031391},
+	series={Wiley Series in Discrete Mathematics and Optimization},
+	url={https://books.google.de/books?id=tarLTNwM3gEC},
+	year={2011},
+	publisher={Wiley}
+}
+
+
+@Article{Rounding,
+	author="Lenstra, Jan Karel
+	and Shmoys, David B.
+	and Tardos, {\'E}va",
+	title="Approximation algorithms for scheduling unrelated parallel machines",
+	journal="Mathematical Programming",
+	year="1990",
+	volume="46",
+	number="1",
+	pages="259--271",
+	issn="1436-4646",
+	doi="10.1007/BF01585745",
+	url="http://dx.doi.org/10.1007/BF01585745"
+}
