--- a/Ausarbeitung/literatur.bib
+++ b/Ausarbeitung/literatur.bib
@@ -32,3 +32,28 @@
 	doi="10.1007/BF01585745",
 	url="http://dx.doi.org/10.1007/BF01585745"
 }
+
+@INPROCEEDINGS{TourSpliting, 
+	author={G. N. Frederickson and M. S. Hecht and C. E. Kim}, 
+	booktitle={Foundations of Computer Science, 1976., 17th Annual Symposium on}, 
+	title={Approximation algorithms for some routing problems}, 
+	year={1976}, 
+	pages={216-227}, 
+	keywords={Approximation algorithms;Cities and towns;Computer science;Cost function;Cranes;Educational institutions;Minimax techniques;Polynomials;Routing;Traveling salesman problems}, 
+	doi={10.1109/SFCS.1976.6}, 
+	ISSN={0272-5428}, 
+	month={Oct},}
+
+
+@article{CVRPApprox,
+	ISSN = {0364765X, 15265471},
+	URL = {http://www.jstor.org/stable/3689422},
+	author = {M. Haimovich, A. H. G. Rinnooy Kan},
+	journal = {Mathematics of Operations Research},
+	number = {4},
+	pages = {527-542},
+	publisher = {INFORMS},
+	title = {Bounds and Heuristics for Capacitated Routing Problems},
+	volume = {10},
+	year = {1985}
+}
