--- a/Ausarbeitung/literatur.bib
+++ b/Ausarbeitung/literatur.bib
@@ -48,7 +48,7 @@
 @article{CVRPApprox,
 	ISSN = {0364765X, 15265471},
 	URL = {http://www.jstor.org/stable/3689422},
-	author = {M. Haimovich, A. H. G. Rinnooy Kan},
+	author = {M. Haimovich and A. H. G. Rinnooy Kan},
 	journal = {Mathematics of Operations Research},
 	number = {4},
 	pages = {527-542},
